product create, list with auth and rbac middleware and req body validation with joi
